7.x-1.x
--------------------------
 - Added patch for workbench_moderation: Invalid argument supplied for foreach() 2360973.
 - Added a function in dkan_sitewide to check if a specific page is the front page.
 - Improve module and user cleanup inside dkan workflow context after run tests
 - Update leaflet library to v1.0.2 and leaflet markercluster to v1.0.0. Unift leaflet libraries (was using a separate version for recline module)
 - Upgraded to new 1.0 release of Visualization Entity module
 - Add install hook to DKAN Workflow to force a Features revert of dkan_sitewide_menu, to make sure Workflow links added correctly
 - Remove Panels IPE from dataset and search pages; in DKAN, we only want to show IPE for panelizer layouts, not templates or other "sitewide" pages.
 - Update user profile page search to be consistant with the rest of the site and moves user info to sidebar block.
 - Fixes typo in "add data story" link in command center menu
 - Add topic icons to the drop down menu
 - Renamed the default HTML text format to 'Markdown HTML'
 - Improved markdown text editor toolbar
 - URLs on dataset's additional info are now properly displayed as links.
 - Removed warnings about undefined permissions when visualization_entity_choropleth_bundle module is enabled.
 - Removed warnings about undefined permissions when visualization_entity_geojson_bundle module is enabled.
 - Removed specific visualization entity charts permissions from dkan_extension.
 - Added test feature to validate that users with Editor, Content Creator and Site Manager roles are not able to access to admin pages.
 - Default content was improved and now it's generated based on fixtures.
 - Removed omega theme.
 - Removed delta module.
 - Moved Nuboot Radix theme into core build.
 - Change admin theme setting to use default theme rather than nuboot radix
 - Page content type added to panelizer and now defined in features, with in-place editor enabled for page content.